--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -16,7 +16,7 @@ body {
     background: url(../imagens/fundo-madeira.jpg)no-repeat top center;
     background-size: cover;
     background-attachment: fixed;
-    
+
 }
 
 main {
@@ -36,4 +36,30 @@ section#telefone {
     background: url(../imagens/frame-iphone.png)no-repeat;
 }
 
+iframe#tela {
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 269px;
+    height: 471px;
 
+}
+
+section#redes-sociais img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.363);
+    box-sizing: border-box;
+}
+
+section#redes-sociais {
+    text-align: right;
+}
+
+section#redes-sociais img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.623);
+    transform: translate(-3px, -3px);
+    box-sizing: 5px 5px 10px rgba(0, 0, 0, 0.568);
+    transition: transform .3s, border 0.3s;
+}
